# WB

./: .gitignore  Dockerfile  README.md  doc_2024-03-10_11-50-11.env  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  run.sh
backend/: admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json  webpack.config.js
frontend/scripts/: watch.js
frontend/src/: App.js
frontend/src/components/Feature/: Feature.jsx
frontend/src/components/Footer/: Footer.jsx
frontend/src/components/Reviews/: reviews.jsx
frontend/src/components/Schedle/: ScheduleChart.jsx
frontend/src/components/Services/: Services.jsx
frontend/src/components/banner/: Banner.jsx
frontend/src/components/records/: Records.jsx
frontend/src/components/scheduleForm/: ScheduleForm.jsx
frontend/src/components/user_Icon/: userProfile.jsx
frontend/src/pages/: DoctorPage.jsx  Home.jsx  LoginPage.jsx  ProfilePage.js  RegistrationForm.jsx  Registrator.jsx  appointment.jsx  calendar.js  profile.html
frontend/src/styles/: Appointment.css  Banner.css  DoctorPage.css  Fotter.css  Home.css  Login.css  Profile.css  Registration.css  Review.css  Services.css  common.css
frontend/static/frontend/: asset-manifest.json  index.html
frontend/static/frontend/static/js/: bundle.js  bundle.js.map  node_modules_web-vitals_dist_web-vitals_js.chunk.js  node_modules_web-vitals_dist_web-vitals_js.chunk.js.map
react_django/: settings.py  urls.py  yasg.py
