[project]
name = "WhiteBeauty"
version = "0.1.0"
description = "WhiteBeauty App"


[tool.poetry]
name = "WhiteBeauty"
version = "0.1.0"
description = "WhiteBeauty App"
authors = ["islamkazproject@gmail.com>"]
repository = "https://github.com/islamkazproject/WhiteBeauty"

[tool.poetry.dependencies]
python = ">=3.11"
djangorestframework = ">=3.14.0"
pillow = "^10.2.0"
django = "^5.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-django = "^4.5"
black = "^22.3"
isort = "^5.10"
flake8 = "^4.0"
