[project]
name = "WhiteBeauty"
version = "0.1.0"
description = "WhiteBeauty App"


[tool.poetry]
name = "WhiteBeauty"
version = "0.1.0"
description = "WhiteBeauty App"
authors = ["islamkazproject@gmail.com>"]
repository = "https://github.com/islamkazproject/WhiteBeauty"

[tool.poetry.dependencies]
python = ">=3.11"
djangorestframework = ">=3.14.0"
django = "^5.0.2"
drf-yasg = "^1.21.7"
requests = "^2.31.0"
psycopg2 = "^2.9.9"
python-dotenv = "^1.0.1"
pip = "^24.0"
install = "^1.3.5"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
django-debug-toolbar = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-django = "^4.5"
black = "^22.3"
isort = "^5.10"
flake8 = "^4.0"

[tool.isort]
profile = "black"
multi_line_output = 3
force_grid_wrap = 0
combine_as_imports = true
skip_gitignore = true
skip_glob = ["**/migrations/*", "**/settings/*"]

[tool.black]
line-length = 90
target-version = ['py310']